--- a/ElsaMwol/Dockerfile
+++ b/ElsaMwol/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /root/WhatsAsenaDuplicated/
 ENV TZ=Europe/Istanbul
 RUN npm install supervisor -g
 RUN yarn install --no-audit
-RUN git clone https://github.com/HARI-SANTH/Media
+RUN git clone https://github.com/J-I-H-A-D/Media
 
 CMD ["node", "bot.js"]
